Fix older Java